MIRA DE QUIEN TE BURLASTESS

--- a/2-Marcelo/Lo que quieras/Whatever.html
+++ b/2-Marcelo/Lo que quieras/Whatever.html
@@ -8,16 +8,19 @@
 </head>
 <body>
     <div class="middle">
-        <a class="btn" href="#">
+        <a class="btn" href="https://api.whatsapp.com/send/?phone=5492235264335&text&app_absent=0">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a class="btn" href="https://www.facebook.com/marrrzelito">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a class="btn" href="#">
+        <a class="btn" href="https://www.instagram.com/marce_ves">
             <i class="fab fa-instagram"></i>
         </a>
-        <a class="btn" href="#">
+        <a class="btn" href="https://twitter.com/marrrzelito">
             <i class="fab fa-twitter"></i>
         </a>
-        <a class="btn" href="#">
+        <a class="btn" href="https://www.youtube.com/watch?v=fH-wr9qwzYQ&ab_channel=L.F.C.AMusic">
             <i class="fab fa-youtube"></i>
         </a>
         <a class="btn" href="#">
@@ -26,9 +29,7 @@
         <a class="btn" href="#">
             <i class="fab fa-google"></i>
         </a>
-        <a class="btn" href="#">
-            <i class="fab fa-whatsapp"></i>
-        </a>
+        
         <a class="btn" href="#">
             <i class="fas fa-envelope"></i>
         </a>
