--- a/3-Rebeca/2-Practicas Css/index.html
+++ b/3-Rebeca/2-Practicas Css/index.html
@@ -5,18 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Examples</title>
-    <style type="text/css">
-        h1{
-            color: violet;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-    </style>
 
 </head>
 <body>
     <h1 style="color:blue; font-family:Georgia, 'Times New Roman', Times, serif"> Welcome To de CSS course</h1>
     <h1>Sample text</h1>
-    <h2> Easy Learning</h2>
+    <h2 style="text-decoration: underline; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;"> Easy Learning</h2>
+    
     
 </body>
 </html>
