--- a/2-Marcelo/Lo que quieras/Whatever.html
+++ b/2-Marcelo/Lo que quieras/Whatever.html
@@ -32,6 +32,9 @@
     </div>
 
 </body>
-</html>
-© 2022 GitHub, Inc.
+<!-- acordate que todo lo que tenga que ver con copyrigth va en el tag footer -->
+<footer>
+    © 2022 GitHub, Inc.
 Terms
+</footer>
+</html>
